--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://unpkg.com/vue@3.0.2"></script>
+    <script src="https://unpkg.com/vue@3.0.0"></script>
   </head>
   <body>
     <h1>Hello World</h1>
+    <div id="app">
+      <h2>{{title}}</h2>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
