--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <h1>Hello World</h1>
     <div id="app">
-      <h2>{{title}}</h2>
+      <h2>{{title}} - {{author}} - {{age}}</h2>
+      <button v-on:click="age++">Increase Age</button>
+      <button v-on:click="age--">Decrease Age</button>
+      <button @click="title = 'somthing else' ">Change Title</button>
     </div>
     <script src="app.js"></script>
   </body>
