--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Hello World</h1>
     <div id="app">
-      <h2>{{title}} - {{author}} - {{age}}</h2>
+      <h2 v-if="showBooks">{{title}} - {{author}} - {{age}}</h2>
       <button v-on:click="age++">Increase Age</button>
       <button v-on:click="age--">Decrease Age</button>
       <button @click="title = 'somthing else' ">Change Title V1</button>
@@ -17,6 +17,11 @@
       <button @click="changeTitleWithParams('New title')">
         Change Title V3
       </button>
+      <button @click="toggleBooks">
+        <span v-if="!showBooks">Show Books</span>
+        <span v-else>Hide Books</span>
+      </button>
+      <div v-show="showBooks">Currently showing books</div>
     </div>
     <script src="app.js"></script>
   </body>
