--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="box" @mouseover="handleEvent($event, 5)"></div>
       <div class="box" @mouseleave="handleEvent"></div>
       <div class="box" @dblclick="handleEvent"></div>
-      <div class="box"></div>
+      <div class="box" @mousemove="handleMousemove">position - {{x}} {{y}}</div>
     </div>
     <script src="app.js"></script>
   </body>
