--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
   <body>
     <h1>Hello World</h1>
     <div id="app">
+      <a v-bind:href="url">Go to github</a>
+      <a :href="urlGoogle">Go to google</a>
       <div v-if="showBooks">
-        <p>{{title}} - {{author}} - {{age}}</p>
+        <ul>
+          <li v-for="book in books">
+            <h3>{{book.title}}</h3>
+            <p>{{book.author}} {{book.age}}</p>
+          </li>
+        </ul>
       </div>
 
       <button @click="toggleBooks">
