--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
       <a :href="urlGoogle">Go to google</a>
       <div v-if="showBooks">
         <ul>
-          <li v-for="book in books" :class="{fav : book.isFav}">
+          <li
+            v-for="book in filteredBooks"
+            :class="{fav : book.isFav}"
+            @click="toogleBookFav(book)"
+          >
             <img :src="book.img" :alt="book.title" />
             <h3>{{book.title}}</h3>
             <p>{{book.author}}</p>
